--- a/src/template.html
+++ b/src/template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <title>React App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
